k8s/dex/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dex
  namespace: default
spec:
  selector:
    app: dex
  ports:
    - name: http
      port: 5556
      targetPort: 5556
