k8s/dex/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: dex
  namespace: default
spec:
  hosts:
    - dex.istio.local
  gateways:
    - app-gateway
  http:
    - match:
        - uri:
            prefix: /dex
      route:
        - destination:
            host: dex.default.svc.cluster.local
            port:
              number: 5556
